--- a/Vue/Vue源码探索/testMVVM/index.html
+++ b/Vue/Vue源码探索/testMVVM/index.html
@@ -11,7 +11,9 @@
     <div id="test">
         <div>Temperature: {{wd}}</div>
         <div>Humidity: {{sd}}</div>
-        <div>体感温度：<input type="text"></div>
+        <div>
+            <span>nodeX</span>
+        </div>
     </div>
 
     <script>
