使用Map()方法对相应节点上的属性值进行修改

--- a/Vue/Vue源码探索/testMVVM/index.html
+++ b/Vue/Vue源码探索/testMVVM/index.html
@@ -12,7 +12,7 @@
         <div>Temperature: {{wd}}</div>
         <div>Humidity: {{sd}}</div>
         <div>
-            <span>nodeX</span>
+            <span>{{wd}}</span>
         </div>
     </div>
 
