--- a/DesignPatterns/index.html
+++ b/DesignPatterns/index.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div {
+            display: inline-block;
+            border: 1px solid black
+        }
+    </style>
 </head>
+
 <body>
+    <div id='demo'></div>
     <button id="oBtn">login</button>
+
+    <div>Yijia</div>
+    <button>add color</button>
+    <button>add bg</button>
+    <button>add width</button>
+    <button>add height</button>
+    <button>add fontSize</button>
+    <button>add fontWeight</button>
+
     <script>
+
+        // 保护代理
+
+        // 策略模式
+
+        var MyImage = function (id) {
+            var oImg = new Image();
+            this.setSrc = function (src) {
+                oImg.src = src;
+            }
+            document.getElementById(id).appendChild(oImg);
+        }
+
+        // var oMyImg = new MyImage("demo");
+        // oMyImg.setSrc('./mayun.jpg');
+
+        var ProxyImage = (function () {
+            var oMyImg = new MyImage("demo");
+            var oNewImage = new Image();
+            oNewImage.onload = function () {
+                oMyImg.setSrc(oNewImage.src)
+            }
+            return function (src) {
+                oMyImg.setSrc('./mayun.jpg');
+                oNewImage.src = src;
+            }
+        })()
+
+        ProxyImage('https://pic4.zhimg.com/v2-f7e5e75bb391e9c74762d9dbee97f807_1200x500.jpg')
         // function Test(name) {
         //     // var this = Object.create(Test.prototype);
         //     if (typeof Test.instance === 'object') {
@@ -19,7 +66,7 @@
 
         //     // return this;
         // }   
-        
+
         // function Test(name) {
         //     var instance = this;
         //     this.name = name;
@@ -51,8 +98,8 @@
 
         var getSingle = function (func) {
             var result;
-            return function() {
-                if(!result) {
+            return function () {
+                if (!result) {
                     result = func.apply(this, arguments);
                 }
                 return result;
@@ -71,10 +118,10 @@
             oDiv.style.display = 'block';
         }
 
-        var Test = (function() {
+        var Test = (function () {
             var instance;
-            return function(name) {
-                if(typeof instance === 'object') {
+            return function (name) {
+                if (typeof instance === 'object') {
                     return instance;
                 }
                 instance = this;
@@ -90,4 +137,5 @@
         console.log(b.lastName === a.lastName);
     </script>
 </body>
+
 </html>
